--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
+/readme.html
+/license.txt
+/index.php
+/wp-blog-header.php
+/wp-comments-post.php
+/wp-activate.php
+/wp-load.php
+/wp-mail.php
+/wp-trackback.php
+/wp-cron.php
+/wp-login.php
+/wp-links-opml.php
+/wp-settings.php
+/xmlrpc.php
+/wp-signup.php
+/wp-includes
+/wp-admin
+/wp-content/themes/twentyfourteen
+/wp-content/plugins
+/wp-content/index.php
+/wp-content/languages
+/wp-content/themes/twentysixteen
+/wp-content/themes/twentyfifteen
+/wp-content/themes/index.php
 .idea
